<resources>
    <string name="app_name">Hajri</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_attendance">Attendance</string>
    <string name="hint_full_name">Enter Name</string>
    <string name="hint_role">Enter Role</string>
    <string name="hint_rate">Enter Rate per day</string>
    <string name="add_employee">Add Employee</string>
    <string name="cancel">Cancel</string>
    <string name="creat_employee">Create Employee</string>
</resources>